sdk/core/include/cimsue/cimsue_c.h

typedef struct cimsue_csc cimsue_csc_t;
/** 명령의 즉시 결과(C++ Result::code). 0 = 성공. */
typedef int32_t cimsue_status_t;
/* ── 열거형 (types.h 와 같은 값) ── */

typedef enum { CIMSUE_TRANSPORT_UDP = 0, CIMSUE_TRANSPORT_TCP = 1, CIMSUE_TRANSPORT_TLS = 2 } cimsue_transport_t;
typedef enum { CIMSUE_AUTH_DIGEST = 0, CIMSUE_AUTH_AKA = 1 } cimsue_auth_scheme_t;
typedef enum { CIMSUE_SRTP_OFF = 0, CIMSUE_SRTP_OPTIONAL = 1, CIMSUE_SRTP_REQUIRED = 2 } cimsue_media_security_t;
typedef struct {
    const char*             server_host;
    int32_t                 server_port;
    cimsue_transport_t      transport;
    const char*             domain;
    const char*             msisdn;
    const char*             imsi;
    const char*             auth_id;        /* 전체 IMPI 직접 지정. NULL 이면 imsi@domain 합성 */
    const char*             display_name;
    const char*             ha1;            /* MD5(IMPI:realm:pw) hex32 — 평문보다 우선 */
    const char*             password;
    cimsue_auth_scheme_t    auth_scheme;
    const char*             aka_k;
    const char*             aka_opc;
    const char*             aka_amf;
    const char* const*      sec_mechanisms; /* RFC 3329 목록 (ptr, count) */
    int32_t                 sec_mechanism_count;
    cimsue_media_security_t media_security;
    int32_t                 expires_sec;
    const char*             contact_params;
    int32_t                 video_auto_transmit;
    const char*             mcptt_id;       /* 비면 "tel:"+msisdn */
    int32_t                 auto_answer_mcptt;
} cimsue_account_config_t;
/* ── CSC 설정 평면 (csc.h) ──
 * 산출 구조체(토큰·프로파일·그룹·XCAP 문서)의 문자열·배열은 같은 핸들에 다음 호출을 할 때까지 유효하다. */

typedef struct {
    const char* host;
    int32_t     port;
    const char* client_id;
    const char* redirect_uri;
    const char* scope;
    const char* ca_pem;                 /* 신뢰 앵커(NULL = 시스템 기본) */
    int32_t     verify_server;
} cimsue_csc_endpoint_t;
typedef struct {
    const char* access_token;
    const char* token_type;
    const char* refresh_token;
    const char* id_token;
    const char* scope;
    int32_t     expires_in_sec;
} cimsue_token_set_t;
typedef struct {
    cimsue_transport_t transport;
    int32_t            port;
} cimsue_service_endpoint_t;
typedef struct {
    const char*                      kind;           /* volte | ptt */
    const char*                      sip_host;
    int32_t                          sip_port;
    cimsue_transport_t               transport;
    const cimsue_service_endpoint_t* transports;
    int32_t                          transport_count;
    int32_t                          enforced;
    cimsue_media_security_t          media_security;
    const char*                      domain;
    const char*                      msisdn;
    const char*                      imsi;
    const char*                      auth_id;
    const char*                      sip_ha1;
    const char*                      mcptt_id;
    cimsue_auth_scheme_t             auth_scheme;
    const char*                      aka_k;
    const char*                      aka_opc;
    const char*                      aka_amf;
    const char* const*               sec_mechanisms;
    int32_t                          sec_mechanism_count;
    int32_t                          max_payload_sds_cplane_bytes;
} cimsue_service_profile_t;
/** 관제 데스크(dispatch_center.md §8.4) — 없으면 present=0. members/ptt_targets 는 서버 미제공 시 빈 배열. */
typedef struct {
    int32_t                         present;
    const char*                     group_id;
    const char*                     group_name;
    const char*                     pilot_id;
    const char*                     monitor_scope;          /* none|own|listed|all */
    const char*                     ptt_listen;
    const char*                     listen_visibility;
    const cimsue_dispatch_member_t* members;
    int32_t                         member_count;
    const cimsue_dispatch_target_t* ptt_targets;
    int32_t                         ptt_target_count;
} cimsue_dispatch_profile_t;
typedef struct {
    const char*                     display_name;
    const char*                     login_id;
    const char*                     country_code;
    const char*                     csc_host;
    int32_t                         csc_port;
    const cimsue_service_profile_t* services;
    int32_t                         service_count;
    cimsue_dispatch_profile_t       dispatch;
    int32_t                         allow_group_creation;   /* GMS 그룹 생성 자격 */
} cimsue_profile_t;
typedef struct {
    const char* uri;
    const char* display_name;
    const char* etag;
    int32_t     member_count;
    int32_t     is_owner;               /* 토큰 주체가 authorized user(편집·삭제 가능) */
} cimsue_group_summary_t;
typedef struct {
    const char* body;
    const char* etag;
    int32_t     not_modified;
} cimsue_xcap_doc_t;
/** 그룹 문서 멤버 — role = chair | participant. */
typedef struct {
    const char* uri;
    const char* display_name;
    const char* role;
    int32_t     priority;
} cimsue_group_member_t;
/** GMS 그룹 문서(csc.h GroupDoc) — GET 산출·PUT 입력 공용. 입력 시 문자열 NULL 은 빈 값, members NULL 은 멤버 없음. */
typedef struct {
    const char*                  uri;
    const char*                  display_name;
    const char*                  etag;                  /* 산출 전용(입력은 if_match 인자) */
    const cimsue_group_member_t* members;
    int32_t                      member_count;
    const char*                  session_type;          /* prearranged | chat | broadcast (NULL = prearranged) */
    int32_t                      video_enabled;
    int32_t                      encryption;
    int32_t                      emergency_call;
    int32_t                      emergency_alert;
    int32_t                      allow_sds;
    int32_t                      allow_fd;
    int32_t                      require_affiliation;
    int32_t                      priority;
    int32_t                      max_participants;      /* 0 = 미기재 */
    const char*                  org_code;
    const char*                  authorized_user;       /* 산출 전용 */
} cimsue_group_doc_t;
CIMSUE_API void CIMSUE_CALL cimsue_csc_endpoint_default(cimsue_csc_endpoint_t* ep);
CIMSUE_API cimsue_csc_t* CIMSUE_CALL cimsue_csc_create(const cimsue_csc_endpoint_t* ep);
CIMSUE_API void CIMSUE_CALL cimsue_csc_destroy(cimsue_csc_t* c);
/** IdMS PKCE(S256) 로그인 → 토큰. */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_login(cimsue_csc_t* c, const char* user_name, const char* password,
                                                        cimsue_token_set_t* out);
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_refresh(cimsue_csc_t* c, const char* refresh_token,
                                                          cimsue_token_set_t* out);
/** GET /provisioning/me */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_fetch_profile(cimsue_csc_t* c, const char* access_token,
                                                                cimsue_profile_t* out);
/** GMS 그룹 목록. 반환 개수(실패 -1), *out 은 핸들 스냅샷 배열. */
CIMSUE_API int32_t CIMSUE_CALL cimsue_csc_list_groups(cimsue_csc_t* c, const char* access_token, const char* user_uri,
                                                      const cimsue_group_summary_t** out);
/** XCAP GET — if_none_match(NULL 가능) 로 304 캐시. */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_xcap_get(cimsue_csc_t* c, const char* access_token, const char* path,
                                                           const char* accept, const char* if_none_match,
                                                           cimsue_xcap_doc_t* out);
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_get_user_profile(cimsue_csc_t* c, const char* access_token,
                                                                   const char* user_uri, const char* etag,
                                                                   cimsue_xcap_doc_t* out);
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_get_service_config(cimsue_csc_t* c, const char* access_token,
                                                                     const char* user_uri, const char* etag,
                                                                     cimsue_xcap_doc_t* out);
/* ── GMS 그룹 관리(TS 24.481 XCAP PUT/DELETE — authorized user = 토큰 주체) ── */
/** 그룹 문서 GET → *out (핸들 스냅샷). */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_get_group(cimsue_csc_t* c, const char* access_token, const char* user_uri,
                                                            const char* group_uri, cimsue_group_doc_t* out);
/** 그룹 생성/수정 — doc 를 PUT. if_match(NULL 가능)로 조건부. 성공 시 *out = 서버 확정 문서(etag 포함). */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_put_group(cimsue_csc_t* c, const char* access_token, const char* user_uri,
                                                            const cimsue_group_doc_t* doc, const char* if_match,
                                                            cimsue_group_doc_t* out);
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_delete_group(cimsue_csc_t* c, const char* access_token, const char* user_uri,
                                                               const char* group_uri);
/** 그룹 문서 ↔ XML (시험·캐시용). to_xml 은 문자열 산출 규약, parse 산출은 스레드별 스냅샷. */
CIMSUE_API int32_t CIMSUE_CALL cimsue_group_doc_to_xml(const cimsue_group_doc_t* doc, char* out, int32_t cap);
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_group_doc_parse(const char* xml, cimsue_group_doc_t* out);
/** /provisioning/me 응답 JSON → 프로파일 (시험용). 산출은 스레드별 스냅샷. */
CIMSUE_API cimsue_status_t CIMSUE_CALL cimsue_csc_parse_profile(const char* json, cimsue_profile_t* out);
CIMSUE_API int32_t CIMSUE_CALL cimsue_csc_enc(const char* s, char* out, int32_t cap);
/** kind 로 서비스 찾기 — 없으면 NULL. profile 이 소유한 배열을 가리킨다(복사 없음). */
CIMSUE_API const cimsue_service_profile_t* CIMSUE_CALL cimsue_profile_service(const cimsue_profile_t* profile,
                                                                              const char* kind);
/** 이 서비스로 등록할 계정 설정. login_pw 는 sip_ha1 이 없을 때의 평문 폴백(NULL 가능).
 *  out 의 문자열은 스레드별 스냅샷 — 같은 스레드의 다음 to_account 호출 전까지 유효하다. */
CIMSUE_API void CIMSUE_CALL cimsue_service_profile_to_account(const cimsue_service_profile_t* sp, const char* login_pw,
                                                              cimsue_account_config_t* out);
/* ── ABI 자기검사 ──
 * 바인딩(P/Invoke 등 손 평탄화 층)이 자기 구조체 정의를 이 DLL 이 실제로 컴파일한 레이아웃과 대조한다 —
 * 헤더와 바인딩의 드리프트를 바인딩 쪽 단위시험이 잡는다(ue_sdk.md §6.4). 구조체를 추가하면 여기에도 등록한다. */
typedef enum {
    CIMSUE_STRUCT_ENGINE_CONFIG = 0, CIMSUE_STRUCT_ACCOUNT_CONFIG, CIMSUE_STRUCT_CALL_OPTIONS,
    CIMSUE_STRUCT_GROUP_CALL_OPTIONS, CIMSUE_STRUCT_HEADER, CIMSUE_STRUCT_REG_INFO, CIMSUE_STRUCT_MCPTT_INFO,
    CIMSUE_STRUCT_MEDIA_SOURCE, CIMSUE_STRUCT_CALL_INFO, CIMSUE_STRUCT_TALKER, CIMSUE_STRUCT_FLOOR_EVENT,
    CIMSUE_STRUCT_FLOOR_INFO, CIMSUE_STRUCT_REQUEST_RESULT, CIMSUE_STRUCT_DIALOG_INFO, CIMSUE_STRUCT_ROSTER_ENTRY,
    CIMSUE_STRUCT_SDS_MESSAGE, CIMSUE_STRUCT_STREAM_STATS, CIMSUE_STRUCT_AUDIO_DEVICE_INFO, CIMSUE_STRUCT_LISTENER,
    CIMSUE_STRUCT_CSC_ENDPOINT, CIMSUE_STRUCT_TOKEN_SET, CIMSUE_STRUCT_SERVICE_ENDPOINT, CIMSUE_STRUCT_SERVICE_PROFILE,
    CIMSUE_STRUCT_DISPATCH_PROFILE, CIMSUE_STRUCT_PROFILE, CIMSUE_STRUCT_GROUP_SUMMARY, CIMSUE_STRUCT_XCAP_DOC,
    CIMSUE_STRUCT_DISPATCH_MEMBER, CIMSUE_STRUCT_DISPATCH_TARGET, CIMSUE_STRUCT_GROUP_MEMBER, CIMSUE_STRUCT_GROUP_DOC,
    CIMSUE_STRUCT_COUNT_
} cimsue_struct_id_t;
/** 구조체의 sizeof(이 DLL 의 컴파일 결과). 모르는 id 는 -1. */
CIMSUE_API int32_t CIMSUE_CALL cimsue_struct_size(cimsue_struct_id_t id);