sdk/windows/dotnet/CimsUe/Native/NativeMethods.cs


    // ── CSC 설정 평면 ──
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern void cimsue_csc_endpoint_default(cimsue_csc_endpoint_t* ep);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern IntPtr cimsue_csc_create(cimsue_csc_endpoint_t* ep);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern void cimsue_csc_destroy(IntPtr c);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_login(IntPtr c, [MarshalAs(U8)] string user_name, [MarshalAs(U8)] string password, cimsue_token_set_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_refresh(IntPtr c, [MarshalAs(U8)] string refresh_token, cimsue_token_set_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_fetch_profile(IntPtr c, [MarshalAs(U8)] string access_token, cimsue_profile_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_list_groups(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, cimsue_group_summary_t** @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_xcap_get(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string path, [MarshalAs(U8)] string accept, [MarshalAs(U8)] string? if_none_match, cimsue_xcap_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_get_user_profile(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, [MarshalAs(U8)] string? etag, cimsue_xcap_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_get_service_config(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, [MarshalAs(U8)] string? etag, cimsue_xcap_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_get_group(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, [MarshalAs(U8)] string group_uri, cimsue_group_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_put_group(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, cimsue_group_doc_t* doc, [MarshalAs(U8)] string? if_match, cimsue_group_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_delete_group(IntPtr c, [MarshalAs(U8)] string access_token, [MarshalAs(U8)] string user_uri, [MarshalAs(U8)] string group_uri);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_group_doc_to_xml(cimsue_group_doc_t* doc, byte* @out, int cap);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_group_doc_parse([MarshalAs(U8)] string xml, cimsue_group_doc_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_parse_profile([MarshalAs(U8)] string json, cimsue_profile_t* @out);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_csc_enc([MarshalAs(U8)] string s, byte* @out, int cap);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern cimsue_service_profile_t* cimsue_profile_service(cimsue_profile_t* profile, [MarshalAs(U8)] string kind);
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern void cimsue_service_profile_to_account(cimsue_service_profile_t* sp, [MarshalAs(U8)] string? login_pw, cimsue_account_config_t* @out);

    // ── ABI 자기검사 ──
    [DllImport(Lib, CallingConvention = CC, ExactSpelling = true)] public static extern int cimsue_struct_size(cimsue_struct_id_t id);
}
